[package]
name = "twilight-error"
description = "Error handling utility for the Twilight ecosystem"
license = "MIT"
repository = "https://github.com/laralove143/twilight-error"
keywords = ["twilight", "error", "discord"]
categories = ["asynchronous", "filesystem", "rust-patterns", "web-programming"]
version = "0.12.0"
edition = "2021"

[dependencies]
twilight-http = "0.14"
twilight-model = "0.14"